feat(project): add PostgreSQL support and update dependencies
- Add psycopg2-binary and django-postgres-extra to requirements.txt
- Update .gitignore to exclude docker-compose.yml
- Enable PostgreSQL support in settings.py by adding necessary apps

--- a/requirements.txt
+++ b/requirements.txt
@@ -52,3 +52,5 @@ urllib3==1.26.12
 zope.interface==6.0
 python-dotenv==1.0.0
 django-environ==0.9.0
+psycopg2-binary==2.9.5
+django-postgres-extra==2.0.9rc11
